added image upload endpoint
